# MVA_Courses_2018

./: .gitignore  README.md
Apprentissage/: README.md
Approches_Geometriques/: README.md
Convex_Optim/: README.md
Convex_Optim/DM/dm3/: DM3.ipynb
DL_Practice/: README.md
DL_Practice/TP3/: ZHAO_TONG.ipynb
Deep_Learning/: MVA-MP1.ipynb  README.md
Deep_Learning/MVA-MP2/: gbt_bov_y_test_sst.txt  logreg_bilstm2_y_test_sst.txt  logreg_bilstm_y_test_sst.txt  logreg_bov_y_test_sst.txt  logreg_lstm_y_test_sst.txt  nlp_project.ipynb
Deep_Learning/MVA-MP3/: MVA-MP3.ipynb
Deep_Learning/MVA-MP3/models/: cnn_train_exploremodel.h5  cnn_train_exploremodel.json  cnn_trainmodel.h5  cnn_trainmodel.json  fc_trainmodel.h5  fc_trainmodel.json
Deformable_Model/: README.md
Deformable_Model/tp2/: TP2-Levelset-MVA.ipynb
Deformable_Model/tp2/nt_toolbox/: perform_blurring.py  signal.py
Geometrie/: README.md
Geometrie/DM/DM2/: main.tex
Geometrie/DM/DM3/: main.tex
Geometrie/DM/DM4/: main.tex
Geometrie/DM/DM5/: main.tex
Geometrie/DM/DM6/: main.tex
Imagerie_Numerique/: README.md
Kernel_Method/: README.md
Kernel_Method/Challenge/codes/: kernel_io.py  start.py
Kernel_Method/DM/: main.tex
Medical_Imaging/: README.md  main.tex
Nuage_Points/: README.md
Nuage_Points/mini_challenge/feature_extraction/: CMakeLists.txt  calc_feature.cpp
PGM/: README.md
PGM/HWK2/codes/: DM2_algorithms.R  (+1 more)
Recvis/: README.md
Recvis/Project/: slide.pptx
Reinforcement/: README.md
Reinforcement/Project/: slide.pptx
Subpixel/: README.md
Topological_Data_Analysis/: README.md
(+126 files in other folders)
